Fix blog styling on mobile

--- a/blog/static/style.css
+++ b/blog/static/style.css
@@ -1,21 +1,18 @@
 body {
-  margin: 1em auto;
-  max-width: 40em;
-  padding: 0 0.62em;
-  font: 1.2em/1.62 sans-serif;
-  text-align: justify;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
   background-color: #eceff4;
+  /* leave room for the nav bar */
+  margin-top: 25px;
+  margin: 1em auto;
+  max-width: 50em;
+  padding: 0 0.62em;
   color: #2e3440;
 }
 h1,
 h2,
 h3 {
   line-height: 1.2;
-}
-@media print {
-  body {
-    max-width: none;
-  }
 }
 
 header {
@@ -30,19 +27,35 @@ header {
 
 header li {
   display: inline;
-  margin-right: 0px;
-  margin-left: 20px;
+  margin-right: 20px;
 }
 
 header li a {
-  font-weight: 300;
-  font-size: 1.5em;
+  font-weight: 325;
   color: #434c5e;
   text-decoration: none;
+}
+
+pre {
+  overflow: auto;
+  white-space: pre;
+  padding: 10px;
 }
 
 pre.src {
   background: #3b4252;
   color: #dcdccc;
-  padding: 10px;
+}
+
+@media only screen and (max-width: 480px) {
+  body {
+    font-size: 14px;
+  }
+  pre {
+    font-size: 12px;
+  }
+}
+
+* {
+  box-sizing: border-box;
 }
